[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Jake Kerr <kodafox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
itertools = "0.9.0"
indoc = "1.0.3"
json = "0.12.4"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
regex = "1.4.2"
